--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@lexical/react": "^0.31.0",
     "@neondatabase/serverless": "^1.0.0",
     "@polar-sh/checkout": "^0.1.11",
-    "@polar-sh/nextjs": "^0.4.3",
+    "@polar-sh/nextjs": "^0.3.16",
     "@polar-sh/sdk": "^0.34.5",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-alert-dialog": "^1.1.10",
@@ -63,7 +63,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@vercel/kv": "^3.0.0",
     "@vercel/og": "^0.6.8",
-    "ai": "^4.3.13",
+    "ai": "^5.0.57",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -84,6 +84,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "openai": "^4.96.2",
+    "postgres": "^3.4.7",
     "posthog-js": "^1.236.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
@@ -115,7 +116,7 @@
     "@types/pg": "^8.11.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.0",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "husky": "^9.1.7",
